Updated about metadata

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -41,7 +41,7 @@ series = "series"
 author = "Guenther Haeussermann"
 twitter = "@pythonquick"
 largeTwitterCard = false # set to true if you want to show a large twitter card image. The default is a small twitter card image
-introDescription = "Technologist, Software Engineer, Networking geek"
+introDescription = "Technologist, Software Engineer, Networking Geek"
 # description = "" # set your site's description here. will be use for home page content meta tags (seo). Alternatively set this description in your homepage content file i.e content/_index.md. Whatever is set in the latter will take precedence
 
 # Google analytics Id
