Updates to syntax-highlighting for hugo

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -24,7 +24,7 @@ series = "series"
 [markup]
   [markup.highlight]
     codeFences = true
-    guessSyntax = true
+    guessSyntax = false
     hl_Lines = "--"
     lineNoStart = 1
     lineNos = true # always set to true # else line numbers won't show at all! even when you toggle them on in the UI
