--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -82,7 +82,7 @@ mobileNavigation = "left" # if you prefer right change to 'right'
 
 # please also not that mode toggle UI will remain in place. That way, if a user prefers darkmode, they can have their way.
 
-enforceLightMode = false
+enforceLightMode = true
 # enforceDarkMode = false
 
 # Text for the languages menu.
